layout issues on login page fixed, added javascript to toggle fields on entities add form, removed email field from users listing on users browse page.

--- a/admin/themes/default/css/screen.css
+++ b/admin/themes/default/css/screen.css
@@ -6,6 +6,8 @@
 
 /* == Generic == */
 body {font:62.5% "Lucida Grande",verdana,arial,helvetica, sans-serif; color:#444; min-width:1000px;background:#333; border-top:12px solid #222;padding:0;}
+
+body#login {min-width:400px;}
 body#login #wrap {background-color: #333; width:346px; min-width:346px;margin:0 auto; padding:40px 0;border:none;}
 
 /* Headings */
@@ -510,7 +512,7 @@ ul.tags, li.tag {display: inline;}
 
 #footer {background:#333; color:#fff; padding-bottom:3.6em;}
 	#footer p {margin:0; padding:18px; width:774px; margin:0 18px;}
-	#login #footer p {padding: 18px 0; margin:0;}
+	body#login #footer p {padding: 18px 0; margin:0;}
 	#footer a:link,#footer a:visited {color:#999;}
 	#footer a:hover, #footer a:active {color:#ccc;}
 	
